# seffybacktest

./: README.md
seffybacktest/: README.md  pyproject.toml
seffybacktest/seffybacktest/: __init__.py  adjusted_sharpe.py  annual_return.py  average_returns.py  benchmarking.py  calmar_ratio.py  capm_calculation.py  correlation.py  cvar_calculator.py  double_sharpe.py  famafrench.py  get_portfolio_returns.py  intraweek_variances.py  market_alpha.py  market_beta.py  modified_sharpe.py  momentum.py  rsi.py  seffybacktest.py  sharpe_ratio.py  sortino_ratio.py  treynor_ratio.py  var_calculator.py  volatility.py
